dropshot/tests/fail/bad_server_endpoint21.stderr
error: endpoint `variadic_argument` must not have a variadic argument
  --> tests/fail/bad_server_endpoint21.rs:33:9
   |
33 |         ...
   |         ^^^

error: endpoint `unsafe_endpoint` must not be unsafe
  --> tests/fail/bad_server_endpoint21.rs:41:11
   |
41 |     async unsafe fn unsafe_endpoint(
   |           ^^^^^^

error: endpoint `const_endpoint` must not be a const fn
  --> tests/fail/bad_server_endpoint21.rs:51:5
   |
51 |     const fn const_endpoint(
   |     ^^^^^

error: endpoint `const_endpoint` must be async
  --> tests/fail/bad_server_endpoint21.rs:51:11
   |
51 |     const fn const_endpoint(
   |           ^^

error: endpoint `abi_endpoint` must not use an alternate ABI
  --> tests/fail/bad_server_endpoint21.rs:61:11
   |
61 |     async extern "C" fn abi_endpoint(
   |           ^^^^^^^^^^

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> tests/fail/bad_server_endpoint21.rs:33:9
   |
33 |         ...
   |         ^^^

error[E0379]: functions in traits cannot be declared const
  --> tests/fail/bad_server_endpoint21.rs:51:5
   |
51 |     const fn const_endpoint(
   |     ^^^^^ functions in traits cannot be const

error: only foreign or `unsafe extern "C"` functions may be C-variadic
  --> tests/fail/bad_server_endpoint21.rs:76:9
   |
76 |         ...
   |         ^^^

error[E0379]: functions in traits cannot be declared const
  --> tests/fail/bad_server_endpoint21.rs:88:5
   |
88 |     const fn const_endpoint(
   |     ^^^^^ functions in traits cannot be const

error[E0658]: C-variadic functions are unstable
  --> tests/fail/bad_server_endpoint21.rs:30:5
   |
30 | /     async fn variadic_argument(
31 | |         _rqctx: RequestContext<Self::Context>,
32 | |         _param1: Query<QueryParams>,
33 | |         ...
34 | |     ) -> Result<HttpResponseOk<()>, HttpError>;
   | |_______________________________________________^
   |
   = note: see issue #44930 <https://github.com/rust-lang/rust/issues/44930> for more information

error[E0658]: C-variadic functions are unstable
  --> tests/fail/bad_server_endpoint21.rs:73:5
   |
73 | /     async fn variadic_argument(
74 | |         _rqctx: RequestContext<Self::Context>,
75 | |         _param1: Query<QueryParams>,
76 | |         ...
77 | |     ) -> Result<HttpResponseOk<()>, HttpError> {
78 | |         unreachable!()
79 | |     }
   | |_____^
   |
   = note: see issue #44930 <https://github.com/rust-lang/rust/issues/44930> for more information

error[E0700]: hidden type for `impl Future<Output = Result<HttpResponseOk<()>, HttpError>>` captures lifetime that does not appear in bounds
  --> tests/fail/bad_server_endpoint21.rs:77:48
   |
73 | /      async fn variadic_argument(
74 | |          _rqctx: RequestContext<Self::Context>,
75 | |          _param1: Query<QueryParams>,
76 | |          ...
77 | |      ) -> Result<HttpResponseOk<()>, HttpError> {
   | | ______________________________________________-_^
   | ||______________________________________________|
   |  |                                              opaque type defined here
78 |  |         unreachable!()
79 |  |     }
   |  |_____^
   |
   = note: hidden type `{async fn body@$DIR/tests/fail/bad_server_endpoint21.rs:77:48: 79:6}` captures lifetime `'_`
